fix: scroll bar on editor more visible

--- a/src/main/resources/buttons.css
+++ b/src/main/resources/buttons.css
@@ -5,7 +5,7 @@
     -fx-background-radius: 3,2,2,2;
     -fx-padding: 12 30 12 30;
 	-fx-font-smoothing-type: lcd;
-    -fx-text-fill: white;
+    -fx-text-fill: #E2E4E0;
     -fx-font-size: 16px;
 	-fx-font-family: sans-serif;
 	-fx-font-weight: bold;
